--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/AccountPages/Login.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/AccountPages/Login.razor
@@ -35,6 +35,11 @@
         <div class="mb-3 d-grid gap-2">
             <button type="submit" class="btn btn-primary">Login</button>
         </div>
+
+        <div>
+            <a>if you dont have a account click on </a>
+                <a href="Registration">Register Account</a>
+        </div>
     </EditForm>
     </div>
 </div>
