--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Component/ComponentCreateAccountModal.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Component/ComponentCreateAccountModal.razor
@@ -8,7 +8,7 @@
                 <button type="button" class="close" @onclick="Close">&times;</button>
             </div>
             <div class="modal-body">
-                <EditForm Model="accountViewModel" OnValidSubmit="HandleValidSubmit">
+                <EditForm Model="accountViewModel" OnValidSubmit="HandleValidSubmit" FormName="CreateAccount">
                     <DataAnnotationsValidator />
                     <ValidationSummary />
 
@@ -23,11 +23,11 @@
                         <ValidationMessage For="@(() => accountViewModel.AccountPassword)" />
                     </div>
 
-                    <div class="form-group">
-                        <label>Role</label>
-                        <InputText @bind-Value="accountViewModel.Role" class="form-control" />
-                        <ValidationMessage For="@(() => accountViewModel.Role)" />
-                    </div>
+                        <div class="form-group">
+                            <label>Role</label>
+                            <InputText @bind-Value="accountViewModel.Role" class="form-control" />
+                            <ValidationMessage For="@(() => accountViewModel.Role)" />
+                        </div>
 
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" @onclick="Close">Cancel</button>
@@ -47,6 +47,7 @@
 
     private async Task HandleValidSubmit()
     {
+
         // Convert the view model to the Account entity
         var newAccount = new Account
             {
