--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Layout/Header.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Layout/Header.razor
@@ -3,30 +3,50 @@
                 <nav class="navbar d-flex justify-content-between align-items-center" style="width: 100%; padding: 10px;">
             
             <div class="logo-container" style="flex: 0 1 auto;">
-                <img src="assets/logo.png" alt="Logo" style="height: 40px; width: 200px; object-fit: cover;" />
+                <NavLink href="">
+                    <img src="assets/logo.png" alt="Logo" style="height: 40px; width: 200px; object-fit: cover;" />
+                </NavLink>
             </div>
-            
+            <AuthorizeView Roles="Admin">
+                <div>
+                    <NavLink class="nav-link text-white" href="Inventory">
+                        <span class="bi bi-list-nested" aria-hidden="true"></span> Inventory
+                    </NavLink>
+                </div>
+            </AuthorizeView>
+            <AuthorizeView Roles="Admin">
+                <div>
+                    <NavLink class="nav-link text-white" href="AccountManagement">
+                        <span class="bi bi-person-fill" aria-hidden="true"></span> Account Management
+                    </NavLink>
+                </div>
+            </AuthorizeView>
+
             <div class="search-container" style="flex: 1; display: flex; justify-content: center;">
                 <input class="header-searchbar" type="text" placeholder="Search for products..." />
             </div>
             
             <div class="icons-container d-flex align-items-center">
-                <a href="/login">
-                <img src="assets/account.png" class="header-icons" alt="Account" />
-            </a>
+                <AuthorizeView>
+                    <NotAuthorized>
+                        <a href="RegistrationPage">Register</a>
+                    </NotAuthorized>
+                </AuthorizeView>
 
-            <a href="/cart">
+                <AuthorizeView>
+                    <NotAuthorized>
+                        <a href="login">Login</a>
+                    </NotAuthorized>
+                    <Authorized>
+                        <a href="logout">Logout</a>
+                    </Authorized>
+
+                </AuthorizeView>
+
+            <a href="/ShoppingCart">
                 <img src="assets/cart.png" class="header-icons" alt="Cart" />
             </a>
             </div>
-
-               <!--
-                <div>
-                    <NavLink class="nav-link text-white" href="Inventory">
-                        <span class="bi bi-list-nested" aria-hidden="true"></span> Inventory
-                    </NavLink>
-                 </div>  -->
-               
         </nav>
     </div>
 </header> 
