--- a/E-CommerceStore/E-CommerceStore.WebApp/wwwroot/app.css
+++ b/E-CommerceStore/E-CommerceStore.WebApp/wwwroot/app.css
@@ -104,6 +104,32 @@ color: rgba(10, 17, 24, 0.3);
     width: 800px;
 }
 
+
+.login-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.login-card {
+    background-color: #fff;
+    padding: 2rem;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 100%;
+}
+
+.form-group {
+    margin-bottom: 1.5rem;
+}
+
+.btn {
+    width: 100%;
+    padding: 0.75rem;
+}
+
 .products-bars {
     margin-top: 200px;
     margin-bottom: 300px;
