--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/LoremIpsum.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/LoremIpsum.razor
@@ -7,7 +7,7 @@
     <br/>
     <br/>
 
-<div class="heading" style="text-align: center; font-size: 3rem !important; color: #FAFAFA;">
+    <div class="heading" style="text-align: center; font-size: 3rem !important; color: #050315;">
     <b>WOOOPS! THIS IS JUST A MOCKUP PAGE</b>
 </div>
 
