--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/AccountPages/Login.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/AccountPages/Login.razor
@@ -7,16 +7,16 @@
 @inject IAccountsService AccountService
 @inject NavigationManager NavigationManager
 
-<h3>Login</h3>
-<div class="row">
-    <div class="col-lg-4 offset-lg-4 pt-4 pb-4 border">
+<div class="register-container">
+<div class="centered-container">
+    <div class="loginwindow">
     <EditForm Model="@Model" OnValidSubmit="Authenicate" FormName="LoginForm">
         <DataAnnotationsValidator/>
             <ValidationSummary />
 
-        <div class="mb-3 text-center flex-column">
+                <div class="mb-3 text-center flex-column" style="color: #433bff;">
             
-            <h3>LOGIN</h3>
+            <h3 style="color: #2f27ce";>LOGIN</h3>
         </div>
 
         <div class="mb-3">
@@ -33,15 +33,16 @@
                 <span class="text-danger">@errorMessage</span>
         </div>
         <div class="mb-3 d-grid gap-2">
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="loginbutton">Login</button>
         </div>
 
         <div>
-            <a>if you dont have a account click on </a>
-                <a href="Registration">Register Account</a>
+            <a>If you dont have a account click on </a>
+                <a href="RegistrationPage">Register Account</a>
         </div>
     </EditForm>
     </div>
+</div>
 </div>
 @code {
     [CascadingParameter]
