--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/AccountPages/Logout.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/AccountPages/Logout.razor
@@ -2,20 +2,8 @@
 @using Microsoft.AspNetCore.Authentication
 @inject NavigationManager NavigationManager
 
-<div class="row">
-    <div class="col-12">
-        <div class="card">
-            <div class="card-body flex-column">
-                <div class="text-center">
-                    <img src="/images/logout.png" style="max-height: 5rem" />
-                </div>
-               
-                <div class="text-center mt-2">
-                    <span class="text-danger fw-bolder">You've successfully logged out of the application'.</span>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="logout-bg-container">
+    <div class="logout-bg-img"/>
 </div>
 
 
