--- a/E-CommerceStore/E-CommerceStore.WebApp/wwwroot/app.css
+++ b/E-CommerceStore/E-CommerceStore.WebApp/wwwroot/app.css
@@ -323,7 +323,7 @@ content: "An error has occurred."
     height: 350px;
     width: 850px;
     border-radius: 20px;
-    background-color: #dedcff;
+    background-color: #fbfbfe;
     margin-right: 75px;
     box-shadow: 8px 8px 6px rgba(0, 0, 0, 0.2);
 }
