--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/ShoppingCart.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/ShoppingCart.razor
@@ -6,6 +6,7 @@
 
 @inject IAccountsService AccountsService
 @inject AuthenticationStateProvider AuthenticationStateProvider
+
 <div class="mockup-bg-container">
     
     <div class="main-container">
@@ -49,7 +50,7 @@
         else
         {
             <div class="product-cart">
-                <p class="promotion-text">You have 0 items in the shopping cart.</p>
+                <p class="text-container">You have 0 items in the shopping cart.</p>
             </div>
             
         }
