--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/Home.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/Home.razor
@@ -132,6 +132,14 @@
     public List<Product> gaming = new List<Product>();
 
 
+    protected override void OnAfterRender(bool firstRender)
+    {
+        if (firstRender)
+        {
+            
+        }
+    }
+
     protected override async Task OnInitializedAsync()
     {
         Products = await ProductService.GetAllProductsExecuteAsync();
