--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/Inventory.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/Inventory.razor
@@ -133,7 +133,7 @@
 
     }
 
-    private async void AddToChartOpen(Product product)
+    private void AddToChartOpen(Product product)
     {
         selectedProduct = product;
         AddToChartShow = true;
