--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/AccountPages/Login.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/AccountPages/Login.razor
@@ -7,7 +7,7 @@
 @inject IAccountsService AccountService
 @inject NavigationManager NavigationManager
 
-<div class="register-container">
+<div class="classicbg-container">
 <div class="centered-container">
     <div class="loginwindow">
     <EditForm Model="@Model" OnValidSubmit="Authenicate" FormName="LoginForm">
