--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/AccountPages/Registration.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/AccountPages/Registration.razor
@@ -6,7 +6,7 @@
 @inject IAccountsService AccountsService
 @inject NavigationManager NavigationManager
 
-<div class="register-container">
+<div class="classicbg-container">
     <div class="register-card">
         <h3 style="color: #2f27ce; text-align: center;">REGISTER</h3>
         <EditForm Model="newAccount" OnValidSubmit="HandleValidSubmit" FormName="registarton">
