--- a/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/Home.razor
+++ b/E-CommerceStore/E-CommerceStore.WebApp/Components/Pages/Home.razor
@@ -12,8 +12,8 @@
         <div class="subtitle">BROAD SELECTION OF ELECTRONICS</div>
     </div>
         <div class="promotion-text">
-            <b>-5% DISCOUNT</b> ON ALL ORDERS BEFORE 31.12.2024 <br />
-            USE CODE <b>“NEW YEAR"</b>
+            -5% DISCOUNT ON ALL ORDERS BEFORE 31.12.2024 <br />
+            USE CODE “NEW YEAR"
         </div>
     </div>
 </div>
