--- a/E-CommerceStore/E-CommerceStore.WebApp/wwwroot/app.css
+++ b/E-CommerceStore/E-CommerceStore.WebApp/wwwroot/app.css
@@ -129,11 +129,11 @@ content: "An error has occurred."
 }
 
 
-.register-container {
+.classicbg-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 72vh;
     background-image: url('/assets/landingbg.svg');
     background-color: #222222;
     background-size: cover;
@@ -655,10 +655,347 @@ content: "An error has occurred."
         box-shadow: 0 4px 6px rgba(67, 59, 255, 0.3);
     }
 
+.product-detail-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 75vh;
+}
+
+.product-detail {
+    display: flex;
+    gap: 50px;
+    background-color: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 16px;
+    padding: 40px;
+    width: 90%;
+    max-width: 1200px;
+}
+
+.product-detail-image {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+    .product-detail-image img {
+        max-width: 100%;
+        max-height: 500px;
+        object-fit: contain;
+        border-radius: 10px;
+        background-color: #dedcff;
+        padding: 15px;
+    }
+
+.product-detail-info {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+}
+
+    .product-detail-info h1 {
+        font-size: 2.2rem;
+        color: #2f27ce;
+        margin: 0;
+    }
+
+    .product-detail-info p {
+        font-size: 1.3rem;
+        color: #050315;
+        margin: 0;
+    }
+
+.add-to-cart-button {
+    width: 220px;
+    height: 55px;
+    background-color: #433bff;
+    color: #fbfbfe;
+    font-size: 1rem;
+    font-weight: bold;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: transform 0.2s, box-shadow 0.2s;
+    align-self: flex-start;
+}
+
+    .add-to-cart-button:hover {
+        background-color: #2f27ce;
+        transform: translateY(-3px);
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15);
+    }
+
+    .add-to-cart-button:active {
+        transform: translateY(1px);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+.main-container {
+    width: 90%;
+    max-width: 900px;
+    margin: auto;
+    padding: 20px;
+    background-color: #f4f4f4;
+    display: flex;
+    align-items: flex-start;
+}
+
+.product-cart {
+    flex: 3;
+    min-width: 65%;
+    margin-top: 15px;
+    max-height: 900px;
+    overflow-y: auto;
+    padding-right: 10px;
+}
 
 
+.product-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    
+    margin-bottom: 20px;
+    border-radius: 8px;
+    background-color: #fbfbfe;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s;
+    width: 100%;
+}
 
+    .product-container:hover {
+        transform: scale(1.01);
+    }
 
+.text-container {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+    flex: 1;
+    background-color: #fbfbfe;
+}
 
+.image-style {
+    height: 150px;
+    width: 160px;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
 
+.product-name {
+    font-size: 22px;
+    font-weight: 700;
+    color: #333;
+    margin: 0 0 8px;
+}
 
+.product-size, .product-color {
+    font-size: 16px;
+    color: #666;
+    margin: 4px 0;
+}
+
+.item-management-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.trash-image {
+    width: 20px;
+    height: 20px;
+}
+
+.remove-text, .wishlist-text {
+    font-size: 15px;
+    font-weight: 600;
+    color: #007bff;
+    cursor: pointer;
+    transition: color 0.3s ease;
+    margin-left: 10px;
+    margin-top: 15px;
+}
+
+    .remove-text:hover, .wishlist-text:hover {
+        cursor: pointer;
+    }
+
+.heart-image {
+    width: 20px;
+    height: 20px;
+    margin-left: 40px;
+}
+
+.sum-container {
+    margin-left: auto;
+    margin-right: 25px;
+    margin-top: 10px;
+}
+
+.quantity-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-left: auto;
+}
+
+.quantity-input {
+    width: 50px;
+    height: 30px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    color: #333;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    background-color: #f9f9f9;
+}
+
+.price-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.price {
+    font-size: 25px;
+    margin-top: 20px;
+}
+
+.price-promotion {
+    font-size: 18px;
+    margin-top: 20px;
+    color: #999;
+    margin-right: 8px;
+    text-decoration: line-through;
+}
+
+.promotion-text {
+    color: #ff4c4c;
+    font-weight: 400;
+    font-size: 26px;
+    text-align: left;
+}
+
+.summary-container {
+    position: absolute;
+    right: 70px;
+    top: 100px;
+    width: 350px;
+    background-color: #dedcff;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    max-width: 400px;
+}
+
+.total-amount-text {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.cost-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #333;
+}
+
+.price-type-label {
+    font-weight: normal;
+}
+
+.price-label {
+    font-weight: bold;
+    text-align: right;
+}
+
+.line-summary {
+    border-top: 1px solid #ddd;
+    margin: 20px 0;
+}
+
+.total-amount {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 18px;
+    font-weight: bold;
+    padding-top: 10px;
+}
+
+.checkout-button {
+    background-color: #2f27ce;
+    color: white;
+    border: none;
+    padding: 15px;
+    border-radius: 20px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    height: 50px;
+    width: 100%;
+    text-align: center;
+    transition: background-color 0.3s;
+    margin-top: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+    .checkout-button:hover {
+        background-color: #0056b3;
+    }
+
+.right-section {
+    display: flex;
+    flex-direction: column;
+}
+
+.promo-code-container {
+    margin-top: 50px;
+    margin-bottom: 30px;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    font-size: 16px;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+}
+
+.promo-code-title {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #333;
+}
+
+.promo-code-input {
+    flex: 1;
+    padding: 10;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 14px;
+    color: #333;
+}
+
+.apply-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+    .apply-button:hover {
+        background-color: #0056b3;
+    }
